fix table likert layout and remove scrollbar

--- a/assets/sass/molecules/_table.scss
+++ b/assets/sass/molecules/_table.scss
@@ -250,15 +250,16 @@ table.tablesaw {
 /* stylelint-enable */
 
 .table-likert {
-  max-width: 100%;
-  overflow-x: scroll;
-
   @media screen and (min-width: 39.9375em) {
     .option {
       @include sr-only();
     }
 
     td {
+      .form-group {
+        margin-bottom: 0;
+      }
+
       .input-radio {
         text-align: center;
       }
